routes/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /httpbin
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      # Delegate to HttpBin service in Mesh
      # - name: httpbin
      #   namespace: default
      #   port: 8000
      - group: gloo.solo.io
        kind: Upstream
        name: httpbin-8000-mtls
        namespace: gloo-system
      # - group: gloo.solo.io
      #   kind: Upstream
      #   name: default-httpbin-8000
      #   namespace: gloo-system
